--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "description": "[![Actions Status](https://github.com/AlexanderIzmailov/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/AlexanderIzmailov/frontend-project-44/actions)",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js"
   },
   "main": "index.js",
   "scripts": {
